# website

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: Sprite-0001.aseprite  about-me.aseprite  dots.aseprite  gruvbox.css  home.aseprite  main.css  style.css  styles.css
assets/blog/: test.md
blog/: tokenizer-compress.md
src/: blog.rs  header.rs  home.rs  main.rs  notfound.rs  nvimbar.rs  projects.rs  terminal.rs  tree.rs  window.rs
src/components/: navbar.rs
src/pages/: blog.rs  contact.rs  home.rs  mod.rs  projects.rs
