[package]
name = "website"
version = "0.1.0"
authors = ["rhaskia <rhaskiagamedev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
tokio = { version = "1.42.0", features = ["rt-multi-thread"]}
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
fullstack = []
