[package]
name = "website"
version = "0.1.0"
authors = ["rhaskia <rhaskiagamedev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
pulldown-cmark = "0.12.2"
serde = "1.0.216"
time = "0.3.37"
yaml-front-matter = "0.1.0"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
