[package]
name = "website"
version = "0.1.0"
authors = ["rhaskia <rhaskiagamedev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
dioxus = { version = "0.6.1", features = ["web", "router"] }
pulldown-cmark = "0.12.2"
reqwest = "0.12.12"
serde = "1.0.216"
time = "0.3.37"
web-sys = "0.3.77"
yaml-front-matter = "0.1.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
